mvvm data cycle

--- a/cvManager/cvManager.csproj
+++ b/cvManager/cvManager.csproj
@@ -62,9 +62,12 @@
     <Compile Include="CustomControls\BindablePasswordBox.xaml.cs">
       <DependentUpon>BindablePasswordBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\CondidatModel.cs" />
+    <Compile Include="Model\ICondidatRepository.cs" />
     <Compile Include="Model\IUserRepository.cs" />
     <Compile Include="Model\UserAccountModel.cs" />
     <Compile Include="Model\UserModel.cs" />
+    <Compile Include="Repositories\CondidateRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="ViewModel\CondidateViewModel.cs" />
