receving data from db is done

--- a/cvManager/cvManager.csproj
+++ b/cvManager/cvManager.csproj
@@ -70,12 +70,16 @@
     <Compile Include="Repositories\CondidateRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="ViewModel\AddCondidateViewModel.cs" />
     <Compile Include="ViewModel\CondidateViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\ViewModelCommand.cs" />
+    <Compile Include="View\AddCondidateView.xaml.cs">
+      <DependentUpon>AddCondidateView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\CondidateView.xaml.cs">
       <DependentUpon>CondidateView.xaml</DependentUpon>
     </Compile>
@@ -94,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\UIColors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\AddCondidateView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
