--- a/cvManager/App.config
+++ b/cvManager/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="WpfApp1.Properties.Settings.cvManagerConnexionString"
+   connectionString="Server=(local); Database=cvManager; Integrated Security=true"
+   providerName="System.Data.SqlClient" />
+  <add name="cvManager.Properties.Settings.cvManagerConnectionString"
+   connectionString="Data Source=STAGIAIRE;Initial Catalog=cvManager;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
